<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Assign3 2017 Sean Heaslip</string>
    <string name="order_prescription">Order prescription</string>
    <string name="chemist_list">Chemist List</string>
    <string name="take_photo">Take Photo of Prescription</string>
    <string name="optional_Instructions">Enter other instructions (optional)</string>
    <string name="optional_phonenumber">Enter phone number (optional)</string>
    <string name="send_order">SEND ORDER</string>
    <string name="collection_time_hours">Collection Time (Hours)</string>
    <string name="title_activity_prescription__layout">Prescription_Layout</string>
    <string name="Email_Subject">Prescription Request</string>
    <string name="FromEmail">colette.kirwan@dcu.ie</string>
    <string name="Prescription_Name">Enter Name Here</string>
    <string name="Msg_Subject">Prescription request</string>
    <string name="ToEmail">chemist@dcu.ie</string>
    <string name="Msg_Name">Name:</string>
    <string name="Msg_Part1">Please find my prescription attached. I will collect it in</string>
    <string name="Msg_Part2">time.</string>
    <string name="Msg_Part3">Kind regards,</string>
    <string name="Msg_PhoneNum">Contact Number: </string>
    <!--String Array for Spinner-->
    <string-array name="collectionTimes">
        <item></item>
        <item>1 Hr</item>
        <item>3 Hr</item>
        <item>12 Hr</item>
        <item>48 Hr</item>
    </string-array>
</resources>
